# trading-live

./: .env.example  .gitignore  QUICKSTART.md  README.md  config.db  config.py  main.py  projects.md  pyproject.toml  run_stream.bat  runtime_settings.json  start.py
audio/: narrator.py  tts.py
chart/: chart_renderer.py
dashboard/: app.py  db.py
dashboard/templates/: index.html
data/: binance_fetcher.py  mt5_fetcher.py  news_fetcher.py  price_fetcher.py
docs/: ACCEPTANCE_TEST_REPORT_TEMPLATE.md  CLIENT_HANDOVER_CHECKLIST.md  CLIENT_QUICKSTART.md  CLIENT_REPLY_CHART_STRATEGY.md  OPERATIONS_MANUAL_JA.md  TESTING_GUIDE.md  TROUBLESHOOTING_JA.md  WINDOWS_VPS_SETUP_JA.md  docs.md
overlay/: font_manager.py  frame_composer.py
stream/: ffmpeg_streamer.py
temp/: REFACTOR_SUMMARY.md
